--- a/src/components/Header/header-css.css
+++ b/src/components/Header/header-css.css
@@ -1,36 +1,40 @@
 .Contenedor-Header{
     display: flex;
-    justify-content: space-evenly;
     align-items: center;
     width: 100%;
     height: 15vh;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Baloo Tammudu 2', cursive;
+    background-color: transparent;
+    padding-top: 10px;
 }
 
+
 .Contenedor-Logo{
-    width: 35%;
+    width: 45%;
+    margin: auto 5%;
+    text-align: left;
 }
 
 .Contenedor-Logo ul li , .link{
     list-style: none;
     color: black;
-    font-size: 18px;
+    font-size: 22px;
+    font-weight: 700;
 }
 
 .Contenedor-Logo ul{
     width: 100%;
 }
 
-
 .Contenedor-links{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: center;
-    width: 40%;
+    width: 55%;
 }
 
 .Contenedor-links ul{
-    width: 65%;
+    width: 100%;
     list-style: none;
     text-decoration: none;
 }
@@ -40,9 +44,14 @@
     text-decoration: none;
     color: white;
 }
-
 .link{
     list-style: none;
     text-decoration: none;
-    color: black;
+    color: whitesmoke;
+}
+
+.Logo{
+    color:black;
+    font-weight: 600;
+    font-size: 50px;
 }
