--- a/src/components/TopArea/TopArea.css
+++ b/src/components/TopArea/TopArea.css
@@ -1,13 +1,39 @@
-.HeaderAreaContainer{
-    background-image: url("../../assets/svg/landingPageSolisDev.svg");
-    height: 100vh;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-size: initial;
-    background-position: right;
+.HeaderArea{
     background-color: whitesmoke;
+    background-image: url("../../assets/svg/SolisDevLandingPage.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: right;
+    height: 100vh;
 }
 
-.other{
-    height: 100vh;
+.landingArea{
+    width: 100%;
+    height: 80%;
+    font-family: 'Red Hat Text', sans-serif;
+}
+
+
+.weAre-Text{
+    display: flex;
+    align-items: center;
+    text-align: left;
+    width: 40%;
+    height: 100%;
+    margin: auto 5%;
+}
+
+
+.hi{
+    font-size: 50px;
+    font-weight: 400;
+    line-height: 1em;
+}
+
+.Phrase{
+    font-size: 50px;
+    font-weight: 600;
+    background: -webkit-linear-gradient(#899FF3, #C693F3);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
